--- a/CV_Projekt/CV_Projekt/Views/Chat/Chat11.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Chat/Chat11.cshtml
@@ -23,8 +23,8 @@
                                             {
                                                 @if (message.SenderId.Equals(Model.LoggedInUser.Id))
                                                 {
-                                                    <div class="d-flex flex-row justify-content-end mb-4 pt-1">
-                                                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#deleteMessageSender-@message.Id" style="background-color:#ff6219">
+                                                    <div class="d-flex flex-row justify-content-start mb-4 pt-1">
+                                                        <button type="button" class="btn me-auto" data-bs-toggle="modal" data-bs-target="#deleteMessageSender-@message.Id" style="background-color:#ff6219; color:#fff; margin-top:1rem;">
                                                             <i class="fa-regular fa-trash-can"></i>
                                                         </button>
                                                     </div>
@@ -51,9 +51,9 @@
                                                                     Är du säker på att du vill ta bort meddelandet?
                                                                 </div>
                                                                 <div class="modal-footer">
-                                                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Behåll</button>
+                                                                    <button type="button" class="btn" style="background-color:#fff; color:#ff6219;" data-bs-dismiss="modal">Behåll</button>
                                                                     <form method="post" asp-action="RemoveMessage" asp-route-mid="@message.Id" asp-route-oid="@Model.OtherUser.Id">
-                                                                        <button type="submit" class="btn btn-primary" style="background-color:#ff6219; color:#fff">Ta bort</button>
+                                                                        <button type="submit" class="btn" style="background-color:#ff6219; color:#fff">Ta bort</button>
                                                                     </form>
                                                                 </div>
                                                             </div>
@@ -62,22 +62,26 @@
                                                 }
                                                 else
                                                 {
-                                                    <div class="d-flex flex-row justify-content-start">
-                                                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#deleteMessageReceiver-@message.Id" style="background-color:#ff6219">
-                                                            <i class="fa-regular fa-trash-can"></i>
-                                                        </button>
-                                                    </div>
-                                                    <div class="d-flex flex-row justify-content-start">
+                                                    <div class="d-flex flex-row justify-content-between align-items-start">
+
+                                                        
+                                                    <div class="d-flex flex-row">
                                                         <img src="@Url.Content(Model.OtherUser.PictureUrl)"
                                                              alt="avatar 1" style="width: 45px; height: 100%;">
                                                         <div>
                                                             <p class="small p-2 ms-3 mb-1 rounded-3" style="background-color:lightgrey; max-width: 300px; word-wrap: break-word;">
                                                                 @message.Content
                                                             </p>
-                                                            <div class="row-cols-2">
+
+                                                            
                                                                 <p class="small ms-3 mb-3 rounded-3 text-muted">@message.Date</p>
-                                                            </div>
-                                                        </div>
+
+															</div>
+														</div>
+                                                            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#deleteMessageReceiver-@message.Id" style="background-color:#ff6219; color:#fff;">
+                                                                <i class="fa-regular fa-trash-can"></i>
+                                                            </button>
+                                                        
                                                     </div>
                                                     <div class="modal fade" id="deleteMessageReceiver-@message.Id" tabindex="-1" role="dialog" aria-labelledby="deleteMessageReceiver-@message.Id" aria-hidden="true">
                                                         <div class="modal-dialog" role="document">
