--- a/CV_Projekt/CV_Projekt/Views/Account/Settings.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Account/Settings.cshtml
@@ -94,13 +94,39 @@
                 <div class="col-md-6 pt-md-0 pt-3">
                 </div>
             </div>
-                <form method="post" asp-action="AddTag">
+                <div>
+                    <form method="post" asp-action="AddTag" asp-route-uid="@Model.User.Id" asp-route-tid="@Model">
+                        <input asp-for="User.Id" value="@Model.User.Id" hidden />
+                        <select asp-items="@ViewBag.options" asp-for="TagId" class="bg-light form-control"></select>
+                        <button type="submit" class="btn border border-light button mr-3 text-light" style="background-color:#ff6219; margin: 2rem;">Lägg till tagg</button>
+                    </form>
+
+                    <h5>Mina taggar</h5>
+                    <form method="post" asp-action="RemoveTag" asp-route-uid="@Model.User.Id">
+                        <input asp-for="User.Id" value="@Model.User.Id" hidden />
+                       
+                        @if (Model.User.Tags.Count <= 0)
+                        {
+                            <b>Du har inga taggar.</b>
+                        }
+                        else
+                        {
+                            @foreach (var tag in Model.User.Tags)
+                            {
+                                <button type="submit" class="btn border border-light button mr-3 text-light" style="background-color:#ff6219;">Ta bort</button>
+                                <input asp-for="TagId" value="@tag.Id.ToString()" hidden />
+                                <b>@tag.Descriptor</b>
+                            }
+                        }
+                    </form>
+                </div>
+               @*  <form method="post" asp-action="AddTag">
                     <input asp-for="User.Id" value="@Model.User.Id" hidden />
                     <div class="row py-2">
                         <h6 class="cv-h6"><b>Lägg till tags</b></h6>
                         <div class="col-md-6">
                             <label class="settingsLbl" for="skillTtl">Tags</label>
-                            <input asp-for="User.Id" type="text" class="bg-light form-control">
+                            <select asp-items="@ViewBag.options" asp-for="TagId" class="bg-light form-control"></select>
                         </div>
                         <div class="col-md-6 pt-md-0 pt-3">
                         </div>
@@ -135,8 +161,7 @@
                                 <div class="tag-item d-flex justify-content-between align-items-center">
                                     
                                     <span class="tag-name"><b>@tag.Descriptor</b></span>
-                                    <button asp-action="RemoveTag"
-                                            asp-route-uid="@Model.User.Id"
+                                    <button type="submit"
                                             class="btn btn-sm remove-btn"
                                             style="background-color: #fff;
                                                 color: #ff6219;
@@ -146,6 +171,7 @@
                                                 margin-bottom: 2px;">
                                         <i class="fa-solid fa-xmark"></i> Ta bort
                                     </button>
+                                                <input asp-for="TagId" value="@tag.Id.ToString()" hidden />
                                 </div>
                             </li>
                         }
@@ -153,7 +179,7 @@
                     </ul>
                 </div>
                 </div>
-                </form>
+                </form> *@
             <div class="py-3 pb-4 border-bottom">
                 <button class="btn border border-light button mr-3 text-light" style="background-color:#ff6219;" type="submit">Spara Ändringar</button>
                 <button class="btn border border-light button" style="background-color: #fff; color: #ff6219">Avbryt</button>
@@ -176,31 +202,7 @@
             </div>
         </div>
         </form>
-        <div>
-            <form method="post" asp-action="AddTag" asp-route-uid="@Model.User.Id" asp-route-tid="@Model">
-                <input asp-for="User.Id" value="@Model.User.Id" hidden/>
-                <select asp-items="@ViewBag.options" asp-for="TagId"></select>
-                <button type="submit" class="btn border border-light button mr-3 text-light" style="background-color:#ff6219;">Lägg till tagg</button>
-            </form>
-
-            <h5>Mina taggar</h5>
-            <form method="post" asp-action="RemoveTag" asp-route-uid="@Model.User.Id">
-                <input asp-for="User.Id" value="@Model.User.Id" hidden />
-                @if(Model.User.Tags.Count <= 0)
-                {
-                    <b>Du har inga taggar.</b>
-                }
-                else
-                {
-                    @foreach (var tag in Model.User.Tags)
-                    {
-                        <button type="submit" class="btn border border-light button mr-3 text-light" style="background-color:#ff6219;">Ta bort</button>
-                        <input asp-for="TagId" value="@tag.Id.ToString()" hidden/>
-                        <b>@tag.Descriptor</b>
-                    }
-                }
-            </form>
-        </div>
+       
 	</div>
 </body>
 
